# sampleCppCmakeGtestProject

./: .gitignore  CMakeLists.txt  README.md
sampleObj1Lib/: CMakeLists.txt  Makefile  cmake_install.cmake  sampleObj1.cpp  sampleObj1.h
sampleObjLib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainApplication
test/: CMakeLists.txt  SampleObj1-test.cpp  main.cpp
